# kaliQue_asi

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.yaml
backend/crypto_analyzer/: Cargo.toml
backend/crypto_analyzer/src/: lib.rs
backend/pqc_engine/: Cargo.toml
backend/pqc_engine/src/: lib.rs  python_bindings.rs
cli/: Cargo.toml  analysis_report.md
cli/src/: main.rs
frontend/dashboard/: app.py  migration_plan.md  requirements.txt
frontend/dashboard/keys/: web_key_001_public.key  web_key_001_secret.key
frontend/dashboard/static/css/: style.css
frontend/dashboard/static/js/: app.js
frontend/dashboard/templates/: index.html
frontend/migration_planner/: migration_planner.py  requirements.txt
frontend/orchestrator/: agent_coordinator.py  requirements.txt
keys/: demo_key_001_public.key  demo_key_001_secret.key  demo_sig_001_public.key  demo_sig_001_secret.key
