[package]
name = "kalique_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kalique"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
colored = "2.1"
indicatif = "0.17"
chrono = "0.4"
crypto_analyzer = { path = "../backend/crypto_analyzer" }
pqc_engine = { path = "../backend/pqc_engine" }
