[package]
name = "crypto_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
sha2 = "0.10"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "crypto_analyzer"
crate-type = ["cdylib", "rlib"]
