[package]
name = "pqc_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

[lib]
name = "pqc_engine"
crate-type = ["cdylib", "rlib"]
